--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,50 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html>
 
-{% include head.html %}
+<head>
+    <meta charset='utf-8'>
+    <title>
+        {% if page.title %}
+            {{ page.title }}
+        {% else %} 
+            {{ site.name }} &mdash; {{ site.description }}
+        {% endif %}
+    </title>
 
-<!-- hack iOS CSS :active style -->
-<body ontouchstart="">
+    {% if site.highlighter %}
+        <link rel='stylesheet' href='{{ site.url }}/assets/css/syntax.css' type='text/css'>
+    {% endif %}
+    
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
 
-    {% include nav.html %}
+</head>
+
+<body>
+    {% include header.html %}
 
     {{ content }}
-
-    {% include footer.html %}
-
-
-<!-- Image to hack wechat -->
-<img src="{{ site.baseurl }}/img/icon_wechat.jpg" width="0" height="0" />
-<!-- Migrate from head to bottom, no longer block render and still work -->
-
+<hr>
+    <p><small> <i>Build with <a href="https://jekyllrb.com/">Jekyll</a> and  <a href="https://github.com/cyevgeniy/jekyll-true-minimal/">true minimal theme</a></i> </small></p>
 </body>
-
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
