--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,32 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-en">
 
-<head>
-    <meta charset='utf-8'>
-    <title>
-        {% if page.title %}
-            {{ page.title }}
-        {% else %} 
-            {{ site.name }} &mdash; {{ site.description }}
-        {% endif %}
-    </title>
+{% include header.html %}
 
-    {% if site.highlighter %}
-        <link rel='stylesheet' href='{{ site.url }}/assets/css/syntax.css' type='text/css'>
-    {% endif %}
-    
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+<!-- hack iOS CSS :active style -->
+<body ontouchstart="">
 
-</head>
-
-<body>
-    {% include header.html %}
+    {% include index_about.html %}
 
     {{ content }}
-<hr>
-    <p><small> <i>Build with <a href="https://jekyllrb.com/">Jekyll</a> and  <a href="https://github.com/cyevgeniy/jekyll-true-minimal/">true minimal theme</a></i> </small></p>
+
+    {% include index_contact.html %}
+
+
+<!-- Image to hack wechat -->
+<img src="{{ site.baseurl }}/img/icon_wechat.jpg" width="0" height="0" />
+<!-- Migrate from head to bottom, no longer block render and still work -->
+
 </body>
+
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
