update _layout and _include/header.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,11 @@
 <!-- hack iOS CSS :active style -->
 <body ontouchstart="">
 
-    {% include nav.html %}
+    {% include index_about.html %}
 
     {{ content }}
 
-    {% include footer.html %}
+    {% include index_contact.html %}
 
 
 <!-- Image to hack wechat -->
