--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,13 +17,13 @@
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="{{ site.baseurl }}/">首页</a>
+                        <a href="{{ site.baseurl }}/">Home</a>
                     </li>
                     <li>
-                        <a href="{{ site.baseurl }}/tags">标签</a>
+                        <a href="{{ site.baseurl }}/tags">About</a>
                     </li>
                     <li>
-                        <a href="{{ site.baseurl }}/about">关于</a>
+                        <a href="{{ site.baseurl }}/about">Contacts</a>
                     </li>
                 </ul>
             </div>
