--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,6 +20,9 @@
                         <a href="{{ site.baseurl }}/">Home</a>
                     </li>
                     <li>
+                        <a href="{{ site.baseurl }}/">Research</a>
+                    </li>
+                    <li>
                         <a href="{{ site.baseurl }}/tags">About</a>
                     </li>
                     <li>
