--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,13 +20,10 @@
                         <a href="{{ site.baseurl }}/">Home</a>
                     </li>
                     <li>
-                        <a href="{{ site.baseurl }}/">Research</a>
+                        <a href="{{ site.baseurl }}/Contacts">Contacts</a>
                     </li>
                     <li>
-                        <a href="{{ site.baseurl }}/tags">About</a>
-                    </li>
-                    <li>
-                        <a href="{{ site.baseurl }}/about">Contacts</a>
+                        <a href="{{ site.baseurl }}/about">About</a>
                     </li>
                 </ul>
             </div>
