--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,7 +20,7 @@
                         <a href="{{ site.baseurl }}/">Home</a>
                     </li>
                     <li>
-                        <a href="{{ site.baseurl }}/Contacts">Contacts</a>
+                        <a href="{{ site.baseurl }}/contact">Contacts</a>
                     </li>
                     <li>
                         <a href="{{ site.baseurl }}/about">About</a>
